[package]
name = "crabkeibo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
